Criação da função que obtém um valor do attributo atráves de um ID

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -305,5 +305,7 @@
 	"watchAccelerationDescription": "Function to monitor device acceleration.",
 	"clearWatchAcceleration": "Stop Acceleration Watcher",
 	"clearWatchAccelerationhDescription": "Function to cancel accelerometer monitoring.",
-	"clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring."
+	"clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring.",
+	"getAttrValueName": "Get attribute value",
+	"getAttrValueDesc": "Function that get an attribute value from an element"
 }
