--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -308,11 +308,6 @@
   "clearWatchPositionDescription" : "Função para cancelar monitoramento do posicionamento georreferenciado.",
 	"changeAttrValueName": "Definir valor do atributo",
 	"changeAttrValueDesc": "Função que define o valor do atributo de um elemento",
-	"getCurrentAcceleration": "Obter Aceleração de Movimento",
-	"getCurrentAccelerationDescription": "Função que fornece acesso ao acelerômetro do dispositivo.",
-	"watchAcceleration": "Observar Aceleração",
-	"watchAccelerationDescription": "Função para monitorar a aceleração do dispositivo.",
-	"clearWatchAcceleration": "Parar Observador de Aceleração",
-	"clearWatchAccelerationhDescription": "Função para cancelar monitoramento do acelerômetro.",
-	"clearWatchPositionDescription": "Função para cancelar monitoramento do posicionamento georreferenciado."
+	"getAttrValueName":"Obtém valor do atributo",
+	"getAttrValueDesc":"Função que obtém o valor do atibuto de um elemento"
 }
