Inclusao de traduções

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -305,5 +305,6 @@
 	"watchAccelerationDescription": "Function to monitor device acceleration.",
 	"clearWatchAcceleration": "Stop Acceleration Watcher",
 	"clearWatchAccelerationhDescription": "Function to cancel accelerometer monitoring.",
-	"clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring."
+	"clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring.",
+	"clearWatchPosition" : "Stop Postion Watcher"
 }
