--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -308,5 +308,7 @@
 	"clearWatchAcceleration": "Parar Observador de Aceleração",
 	"clearWatchAccelerationhDescription": "Função para cancelar monitoramento do acelerômetro.",
 	"clearWatchPositionDescription": "Função para cancelar monitoramento do posicionamento georreferenciado.",
-	"clearWatchPosition" : "Parar Observador de Posição"
+	"clearWatchPosition" : "Parar Observador de Posição",
+	"showModal":"Exibir modal",
+	"showModalDesc":"Função que exibe um modal"
 }
