--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -310,5 +310,9 @@
 	"clearWatchPositionDescription": "Função para cancelar monitoramento do posicionamento georreferenciado.",
 	"clearWatchPosition" : "Parar Observador de Posição",
 	"showModal":"Exibir modal",
-	"showModalDesc":"Função que exibe um modal"
+	"showModalDesc":"Função que exibe um modal",
+	"openDatabase" : "Criar banco de dados",
+	"openDatabaseDescription" : "Função para criar um banco de dados no dispositivo móvel. Caso não seja passado um nome , será criado com um nome default.",
+	"executeSql" : "Executar Comando SQL" ,
+	"executeSqlDescription" : "Função para executar comando SQL."
 }
