Adicionado tag para tradução da categoria banco de dados

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -312,5 +312,7 @@
 	"openDatabase" : "Create Database",
   "openDatabaseDescription" : "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
   "executeSql" : "Run Command SQL" ,
-  "executeSqlDescription" : "Function to execute command SQL."
+  "executeSqlDescription" : "Function to execute command SQL.",
+  "text" : "Text",
+  "array" : "List of parameters"
 }
