Função para ler QR_CODE adicionada

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -309,13 +309,16 @@
 	"clearWatchPosition": "Stop Postion Watcher",
 	"showModal": "Show modal",
 	"showModalDesc": "Function that show a modal",
-	"openDatabase" : "Create Database",
-  "openDatabaseDescription" : "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
-  "executeSql" : "Run Command SQL" ,
-  "executeSqlDescription" : "Function to execute command SQL.",
-  "text" : "Text",
-  "array" : "List of parameters",
-  "downloadFileName": "Start file download",
-  "downloadFileDescription": "Starts downloading a file from a url",
-  "downloadFileParam0": "URL: Url for download"
+	"openDatabase": "Create Database",
+	"openDatabaseDescription": "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
+	"executeSql": "Run Command SQL",
+	"executeSqlDescription": "Function to execute command SQL.",
+	"text": "Text",
+	"array": "List of parameters",
+	"downloadFileName": "Start file download",
+	"downloadFileDescription": "Starts downloading a file from a url",
+	"downloadFileParam0": "URL: Url for download",
+	"qrCodeScanner": "Read QR CODE",
+	"formatQRCode": "Format: Format to be searched",
+	"messageQRCode": "Message: Message displayed when camera is openned"
 }
