--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -308,16 +308,19 @@
 	"clearWatchAcceleration": "Parar Observador de Aceleração",
 	"clearWatchAccelerationhDescription": "Função para cancelar monitoramento do acelerômetro.",
 	"clearWatchPositionDescription": "Função para cancelar monitoramento do posicionamento georreferenciado.",
-	"clearWatchPosition" : "Parar Observador de Posição",
-	"showModal":"Exibir modal",
-	"showModalDesc":"Função que exibe um modal",
-	"openDatabase" : "Criar banco de dados",
-	"openDatabaseDescription" : "Função para criar um banco de dados no dispositivo móvel. Caso não seja passado um nome , será criado com um nome default.",
-	"executeSql" : "Executar Comando SQL" ,
-	"executeSqlDescription" : "Função para executar comando SQL.",
-	"text" : "Texto",
-    "array" : "Lista de parâmetros",
-    "downloadFileName": "Iniciar download de arquivo",
-    "downloadFileDescription": "Inicia o download de um arquivo de uma url",
-    "downloadFileParam0": "URL: Url para download"
+	"clearWatchPosition": "Parar Observador de Posição",
+	"showModal": "Exibir modal",
+	"showModalDesc": "Função que exibe um modal",
+	"openDatabase": "Criar banco de dados",
+	"openDatabaseDescription": "Função para criar um banco de dados no dispositivo móvel. Caso não seja passado um nome , será criado com um nome default.",
+	"executeSql": "Executar Comando SQL",
+	"executeSqlDescription": "Função para executar comando SQL.",
+	"text": "Texto",
+	"array": "Lista de parâmetros",
+	"downloadFileName": "Iniciar download de arquivo",
+	"downloadFileDescription": "Inicia o download de um arquivo de uma url",
+	"downloadFileParam0": "URL: Url para download",
+	"qrCodeScanner": "Ler QR CODE",
+	"formatQRCode": "Formato: Formato a ser buscado",
+	"messageQRCode": "Mensagem: Mensagem exibida enquanto a camera esta aberta"
 }
