--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -322,5 +322,6 @@
 	"downloadFileParam0": "URL: Url para download",
 	"qrCodeScanner": "Ler QR CODE",
 	"formatQRCode": "Formato: Formato a ser buscado",
-	"messageQRCode": "Mensagem: Mensagem exibida enquanto a camera esta aberta"
+	"messageQRCode": "Mensagem: Mensagem exibida enquanto a camera esta aberta",
+	"qrCodeScannerDescription":"Função que lê alguns formatos conhecidos e retorna o conteúdo. Exemplo: QR_CODE"
 }
