Criação de função para executar de forma assíncrona no cliente

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -321,8 +321,11 @@
 	"qrCodeScanner": "Read barcode",
 	"formatQRCode": "Format: Format to be searched",
 	"messageQRCode": "Message: Message displayed when camera is openned",
-	"qrCodeScannerDescription":"Function that read know formats. Example: QR_CODE.",
-  "openReport" : "Open Report",
-  "openReportDescription" : "Function responsible for opening a report.",
-  "report" : "Report"
+	"qrCodeScannerDescription": "Function that read know formats. Example: QR_CODE.",
+	"openReport": "Open Report",
+	"openReportDescription": "Function responsible for opening a report.",
+	"report": "Report",
+	"statement": "Statements: Statements to be executed",
+	"executeAsynchronousName": "Execute asynchronous",
+	"executeAsynchronousDescription": "Function that execute statement asynchronously"
 }
