--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -332,5 +332,8 @@
 	"scheduleExecutionDescription": "Function that schedule statements to be executed after a delay",
 	"scheduleExecutionParam1": "Initial Delay: Initial delay to execute the statements at first time",
 	"scheduleExecutionParam2": "Schedule Time: Update time between execute the statements",
-	"scheduleExecutionParam3": "Measurement Time: Measurement time used to quantify the others parameters"
+	"scheduleExecutionParam3": "Measurement Time: Measurement time used to quantify the others parameters",
+	"milliseconds": "milliseconds",
+	"hours": "hours",
+	"minutes": "minutes"
 }
