--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -334,5 +334,8 @@
   "scheduleExecutionDescription":"Função que agenda comandos a serem executados após um determinado atraso ou de forma periódica.",
   "scheduleExecutionParam1":"Tempo inicial: Tempo inicial necessário até que a função execute pela primeira o(s) comando(s) definido(s)",
   "scheduleExecutionParam2":"Tempo para Atualização: Tempo de espera entre as execuções do(s) comandos(s)",
-  "scheduleExecutionParam3":"Unidade de Tempo: Unidade de medida do tempo passado como parâmetro"
+  "scheduleExecutionParam3":"Unidade de Tempo: Unidade de medida do tempo passado como parâmetro",
+  "milliseconds":"milissegundos",
+  "hours":"horas",
+  "minutes":"minutos"
 }
