--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -355,5 +355,7 @@
 	"refreshActiveRecordDescription": "Function that return if exists a next record",
 	"refreshActiveRecordParam0": "Datasource",
 	"logoutName": "Logout",
-	"logoutDescription":"Function that logout an user"
+	"logoutDescription":"Function that logout an user",
+	"hideModal": "Hide modal",
+	"hideModalDesc": "Function that hide a modal"
 }
