--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -357,5 +357,13 @@
 	"logoutName": "Logout",
 	"logoutDescription":"Function that logout an user",
 	"hideModal": "Hide modal",
-	"hideModalDesc": "Function that hide a modal"
+	"hideModalDesc": "Function that hide a modal",
+	
+	"createChartName":"Create chart",
+	"createChartDescription":"Function that create a chart",
+	"createChartOptions":"Options: Chart options",
+	"createChartId":"Id: Chart id (canvas)",
+	"createChartType":"Chart type: Chart type to be created",
+	"createChartSeries":"Chart series",
+	"createChartLegends":"Subtitle: Chart Subtitle"
 }
