--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -314,7 +314,7 @@
 	"executeSql": "Run Command SQL",
 	"executeSqlDescription": "Function to execute command SQL.",
 	"text": "Text",
-	"array": "List of parameters",
+	"arrayParams": "List of parameters",
 	"downloadFileName": "Start file download on URL",
 	"downloadFileDescription": "Starts downloading a file from a url",
 	"downloadFileParam0": "URL: Url for download",
@@ -375,10 +375,16 @@
 	"isShownIonicModallDesc":"Function that return if a modal are shown",
 	"createObject":"Create object",
 	"createObjectDescription":"Function that create an object from a text",
-	"string":"text: JSON Text to be converted",
+	"string":"Text",
 	"true":"True",
 	"false":"False",
 	"refreshDatasource":"Update datasource",
 	"refreshDatasourceDescription":"Function that update a datasource, with or without filters",
-	"keepFilters":"Keep filter(s)? : If true, keep the filters on datasource update."
+	"keepFilters":"Keep filter(s)? : If true, keep the filters on datasource update.",
+	"typeOf":"Is type of?",
+	"typeOfDescription":"Function that verify if a variable is of determined type",
+	"number":"Number",
+	"undefined":"Undefined",
+	"function":"Function",
+	"array":"List"
 }
