adição de função para modificar aba

--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -234,7 +234,7 @@
 	"enableComponentDesc": "Função que habilita o componente o uso do componente na tela",
     "focusComponent": "Focar componente",
     "focusComponentDesc": "Função que foca um componente na tela",
-	"disableComponent": "Desabilitar componente",
+    "disableComponent": "Desabilitar componente",
 	"disableComponentDesc": "Função que desabilita o uso do componente na tela",
 	"CategoryType.OBJECT": "Objeto",
 	"getProperty": "Obter Propriedade",
@@ -392,5 +392,7 @@
 	"function":"Função",
 	"array":"Lista",
 	"returnType":"Tipo de Retorno",
-	"mediaType":"Tipo de Mídia"
+	"mediaType":"Tipo de Mídia",
+	"setActiveTab": "Mudar aba",
+	"setActiveTablDesc": "Função que modifica a aba ativa do componente aba"
 }
