[CRONIDE-119] Novas funcionalidades ( variaveis de sessão, consumo de api por cliente, serialização de objetos, obtenção de HostApp, Loading )

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -396,5 +396,24 @@
 	"showLoading":"Show Loading",
 	"showLoadingDesc":"Function that show a loading",
 	"hideLoading":"Hide Loading",
-	"hideLoadingDesc":"Function that hide a loading"
+	"hideLoadingDesc":"Function that hide a loading",
+	"getURLFromOthersName":"Get URL content",
+	"getURLFromOthersDescription":"Function that do a request into a URL and get the content result",
+	"HTTPMethod":"Request method",
+	"contentType":"Content type",
+	"URLAddress":"Endereço URL: Endereço completo do arquivo. Exemplo: https://www.cronapp.io",
+	"paramsHTTP":"Parameters to be passed, if URL_ENCODED, pass a map, if JSON, pass JSON",
+	"headers":"Headers: Map who will be added on headers. Example: Token",
+  "getHostapp":"Get Back-End Path",
+  "getHostappDesc":"Function that return the back-end path. Example: https://myapp.com/",
+  "serializeObject":"Serialize Object",
+  "serializeObjectDescription":"Function that serialize an object. Example: {cronapp:'100%'} returns \"{\"cronapp\":\"100%\"}\"",
+  "setSessionStorage":"Set Session Storage Item",
+  "setSessionStorageDesc":"Function that set an item in session storage on browser. This item is clear when browser is closed and are only visible on current tab.",
+  "getSessionStorage":"Get Session Storage Item",
+  "getSessionStorageDesc":"Function that get an item in session storage on browser. This item is clear when browser is closed and are only visible on current tab.",
+  "setLocalStorage":"Set Local Storage Item",
+  "setLocalStorageDesc":"Function that set an item in session storage on browser (global). This Item is keeped when the browser are closed and are visible to all tabs",
+  "getLocalStorage":"Get Local Storage Item",
+  "getLocalStorageDesc":"Function that get an item in session storage on browser (global). This Item is keeped when the browser are closed and are visible to all tabs"
 }
