--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -398,5 +398,24 @@
 	"showLoading":"Exibir Carregamento",
 	"showLoadingDesc":"Função que exibe um carregamento",
 	"hideLoading":"Esconder Carregamento",
-	"hideLoadingDesc":"Função que esconde um carregamento"
+	"hideLoadingDesc":"Função que esconde um carregamento",
+	"getURLFromOthersName":"Obter conteúdo da URL",
+	"getURLFromOthersDescription":"Função que realiza uma requisição à uma URL e obtém o conteúdo de resposta",
+	"HTTPMethod":"Método da requisição",
+	"contentType":"Tipo de conteúdo",
+	"URLAddress":"URL address: A complete URL addres. Example: https://www.cronapp.io",
+	"paramsHTTP":"Paramêtros: Paramêtros a serem passados, para URL_ENCODED passar um mapa, para JSON, passar JSON",
+	"headers":"Cabeçalho de requisição: Mapa com cabeçalho de requisição a ser adicionado na requisição. Exemplo: Token.",
+  "getHostapp":"Obter Caminho do Back-End",
+  "getHostappDesc":"Função que retorna o caminho do back-end. Exemplo: https://myapp.com/",
+  "serializeObject":"Serializar Objeto",
+  "serializeObjectDescription":"Função que serializa um objeto. Exemplo: {cronapp:'100%'} retorna \"{\"cronapp\":\"100%\"}\"",
+  "setSessionStorage":"Adicionar Item na Sessão da Aba",
+  "setSessionStorageDesc":"Função que adiciona um item na sessão local do navagedor. Esse Item é limpo ao fechar o navegador e é visísvel apenas na aba em que for criado",
+  "getSessionStorage":"Obter Item da Sessão da Aba",
+  "getSessionStorageDesc":"Função que obtém um item da sessão da aba. Esse Item é limpo ao fechar o navegador e é visísvel apenas na aba em que for criado",
+  "setLocalStorage":"Adicionar Item na Sessão do navegador",
+  "setLocalStorageDesc":"Função que adiciona um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
+  "getLocalStorage":"Obter Item da Sessão do navegador",
+  "getLocalStorageDesc":"Função que obtém um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas"
 }
