--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -417,5 +417,7 @@
   "setLocalStorage":"Adicionar Item na Sessão do navegador",
   "setLocalStorageDesc":"Função que adiciona um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
   "getLocalStorage":"Obter Item da Sessão do navegador",
-  "getLocalStorageDesc":"Função que obtém um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas"
+  "getLocalStorageDesc":"Função que obtém um item na sessão global do navegador. Esse item é mantido ao fechar o navegador e é visível em todas as abas",
+	"deleteProperty": "Deletar propriedade",
+	"deletePropertyDescription": "Função que deleta uma propriedade de um objeto/json."
 }
