--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -395,6 +395,8 @@
 	"mediaType":"Tipo de Mídia",
 	"setActiveTab": "Mudar aba",
 	"setActiveTablDesc": "Função que modifica a aba ativa do componente aba",
-	"getDeviceInfo":"Get Device Info",
-	"getDeviceInfoDescription":"Function that get a device info, i.e  uuid, platform"
+	"getDeviceInfo":"Obter Informações do Dispositivo",
+	"getDeviceInfoDescription":"Função que obtém as informações do dispositivo",
+	"getFirebaseToken":"Obter Token do Firebase",
+	"getFirebaseTokenDescription":"Função que retorna o token do firebase para enviar notificações push"
 }
