--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -394,5 +394,7 @@
 	"setActiveTab": "Change tab",
 	"setActiveTablDesc": "Function that set active the selected tab",
 	"getDeviceInfo":"Obter Informações do Dispositivo",
-	"getDeviceInfoDescription":"Função que obtém as informações do dispositivo"
+	"getDeviceInfoDescription":"Function that get a device info, i.e  uuid, platform",
+	"getFirebaseToken":"Get Firebase Token",
+	"getFirebaseTokenDescription":"Function that return a firease token for send push notifications"
 }
