--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -421,5 +421,7 @@
 	"deleteProperty": "Deletar propriedade",
 	"deletePropertyDescription": "Função que deleta uma propriedade de um objeto/json.",
 	"getDeviceInfo":"Obter Informações do Dispositivo",
-	"getDeviceInfoDescription":"Função que obtém as informações do dispositivo"
+	"getDeviceInfoDescription":"Função que obtém as informações do dispositivo",
+	"getFirebaseToken":"Obter Token do Firebase",
+	"getFirebaseTokenDescription":"Função que retorna o token do firebase para enviar notificações push"
 }
