[QAIBT-746] Funções de criação e execução de sqlite.

--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -421,5 +421,6 @@
 	"getDeviceInfo":"Get Device Info",
 	"getDeviceInfoDescription":"Function that get a device info, i.e  uuid, platform",
 	"getFirebaseToken":"Get Firebase Token",
-	"getFirebaseTokenDescription":"Function that return a firease token for send push notifications"
+	"getFirebaseTokenDescription":"Function that return a firease token for send push notifications",
+	"dbName":"Database Name"
 }
