--- a/i18n/locale_en_us.json
+++ b/i18n/locale_en_us.json
@@ -234,163 +234,167 @@
     "focusComponent": "Focus component",
     "focusComponentDesc": "Function that focus a component from screen",
 	"disableComponent": "Disable component",
-	"disableComponentDesc": "Function that disable a component from screen",
-	"CategoryType.OBJECT": "Object",
-	"getProperty": "Get Property",
-	"getPropertyDescription": "Function to get object property.",
-	"object": "Object",
-	"property": "Property",
-	"setProperty": "Set Value",
-	"setPropertyDescription": "Function to assign value to object.",
-	"CategoryType.DEVICE": "Mobile Devices",
-	"vibrate": "Vibrate",
-	"vibrateDescription": "Function to vibrate the mobile device.",
-	"getCurrentPosition": "Get geo-referenced position",
-	"getCurrentPositionDescription": "Function to obtain geo-referenced position.",
-	"success": "Success",
-	"error": "Error",
-	"watchPosition": "Observe Position",
-	"watchPositionDescription": "Function to observe the change in geo-referenced position.",
-	"maximumAge": "Maximum Age",
-	"timeout": "Time Out",
-	"enableHighAccuracy": "Enable High Accuracy",
-	"getPicture": "Get Image",
-	"getPictureDescription": "Function to get an image of the Camera, Gallery, Album of the device.",
-	"destinationType": "Target type",
-	"pictureSourceType": "Image Source",
-	"clearWatch": "Stop Observe",
-	"idsFromScreen": "Get Identifier: Identifier (id) to be gotten from a selected form",
-	"attrName": "Attribute name: Attribute name on a identifier. Example: src='test' returns src",
-	"attrValue": "Attribute value: Attribute value on a identifier. Example: src='test' returns test",
-	"getDirectory": "Get Directory",
-	"getDirectoryDescription": "Function to get directory on the mobile device.",
-	"INTERNAL": "INTERNAL",
-	"EXTERNAL": "EXTERNAL",
-	"removeFile": "Remove File",
-	"fileName": "File Name",
-	"removeFileDescription": "Function to remove file on mobile device.",
-	"readFile": "Read File",
-	"readFileDescription": "Function to read a file on the mobile device.",
-	"createFile": "Create File",
-	"createFileDescription": "Function to create a file on the mobile device.",
-	"dirEntry": "Directory",
-	"createDirectory": "Create Directory",
-	"dirParent": "Parent Directory",
-	"dirChildrenName": "Directory Name",
-	"setStorageItem": "Add Storage Item",
-	"key": "Key",
-	"setStorageItemDescription": "Function to store values in 'Local Storage'.",
-	"getStorageItem": "Get Storage Item",
-	"getStorageItemDescription": "Function to obtain value stored in 'Local Storage'.",
-	"removeStorageItem": "Remove Storage Item",
-	"removeStorageItemDescription": "Function to remove the value stored in the key in 'Local Storage'.",
-	"watchID": "Observe Id",
-	"getConnection": "Network Status",
-	"getConnectionDescription": "Function to provides information about the device's cellular and wifi connection",
-	"verifyConnection": "Check Network Status",
-	"verifyConnectionDescription": "Function to check the status of the device connection.",
-	"UnknownConnection": "Unknown connection",
-	"EthernetConnection": "Ethernet connection",
-	"WiFiConnection": "WiFi connection",
-	"Cell2GConnection": "Cell 2G connection",
-	"Cell3GConnection": "Cell 3G connection",
-	"Cell4GConnection": "Cell 4G connection",
-	"CellGenericConnection": "Cell generic connection",
-	"NoNetworkConnection": "No network connection",
-	"type": "Type",
-	"vibrateValue": "Milliseconds: Parameter is Integer or Integer List.",
-	"changeAttrValueName": "Change attribute value",
-	"changeAttrValueDesc": "Function that change an attribute value from a element",
-	"getCurrentAcceleration": "Get Current Acceleration",
-	"getCurrentAccelerationDescription": "Function that provides access to device accelerometer.",
-	"watchAcceleration": "Observe Acceleration",
-	"watchAccelerationDescription": "Function to monitor device acceleration.",
-	"clearWatchAcceleration": "Stop Acceleration Watcher",
-	"clearWatchAccelerationhDescription": "Function to cancel accelerometer monitoring.",
-	"clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring.",
-	"clearWatchPosition": "Stop Postion Watcher",
-	"showModal": "Show modal",
-	"showModalDesc": "Function that show a modal",
-	"openDatabase": "Create Database",
-	"openDatabaseDescription": "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
-	"executeSql": "Run Command SQL",
-	"executeSqlDescription": "Function to execute command SQL.",
-	"text": "Text",
-	"arrayParams": "List of parameters",
-	"downloadFileName": "Start file download on URL",
-	"downloadFileDescription": "Starts downloading a file from a url",
-	"downloadFileParam0": "URL: Url for download",
-	"qrCodeScanner": "Read barcode",
-	"formatQRCode": "Format: Format to be searched",
-	"messageQRCode": "Message: Message displayed when camera is openned",
-	"qrCodeScannerDescription": "Function that read know formats. Example: QR_CODE.",
-	"openReport": "Open Report",
-	"openReportDescription": "Function responsible for opening a report.",
-	"report": "Report",
-	"statement": "Statements: Statements to be executed",
-	"executeAsynchronousName": "Execute asynchronous",
-	"executeAsynchronousDescription": "Function that execute statement asynchronously",
-	"scheduleExecutionName": "Schedule execution",
-	"scheduleExecutionDescription": "Function that schedule statements to be executed after a delay",
-	"scheduleExecutionParam1": "Initial Delay: Initial delay to execute the statements at first time",
-	"scheduleExecutionParam2": "Schedule Time: Update time between execute the statements",
-	"scheduleExecutionParam3": "Measurement Time: Measurement time used to quantify the others parameters",
-	"millisecondss": "Milliseconds",
-	"hours": "Hours",
-	"minutes": "Minutes",
-	"incSecond": "Increment second on date",
-	"functionToIncSecond": "Function to increment second in date",
-	"secondsToIncrement": "Seconds to increase",
-	"incMinute": "Increment minute on date",
-	"functionToIncMinute": "Function to increment minute in date",
-	"minutesToIncrement": "Minutes to increase",
-	"incHour": "Increment hour on date",
-	"functionToIncHour": "Function to increment hour in date",
-	"hoursToIncrement": "Hours to increase",
-	"getHoursBetweenDates": "Get hours total between dates",
-	"functionToGetHoursBetweenDates": "Function to get hours total between dates",
-	"getMinutesBetweenDates": "Get minutes total between dates",
-	"functionToGetMinutesBetweenDates": "Function to get minutes total between dates",
-	"getSecondsBetweenDates": "Get seconds total between dates",
-	"functionToGetSecondsBetweenDates": "Function to get seconds total between dates",
-	"refreshActiveRecordName": "Exists next record?",
-	"refreshActiveRecordDescription": "Function that return if exists a next record",
-	"refreshActiveRecordParam0": "Datasource",
-	"logoutName": "Logout",
-	"logoutDescription":"Function that logout an user",
-	"hideModal": "Hide modal",
-	"hideModalDesc": "Function that hide a modal",
-	"createSerieName": "Create serie",
-	"createSerieDescription": "Function that create a chart serie",
-	"createSerieParamName": "Serie name",
-	"createSerieParamData": "Data: Serie data",
-	"createSerieParamOptions": "Options: Serie Options",
-	"createChartName": "Create chart",
-	"createChartDescription": "Function that create a chart",
-	"createChartOptions": "Options: Chart options",
-	"createChartId": "Id: Chart id (canvas)",
-	"createChartType": "Chart type: Chart type to be created",
-	"createChartSeries": "Chart serie(s): Set of chart series",
-	"createChartLegends": "Legends: Chart legends",
-	"CategoryType.CHART":"Chart",
-	"isShownIonicModal":"Is shown modal?",
-	"isShownIonicModallDesc":"Function that return if a modal are shown",
-	"createObject":"Create object",
-	"createObjectDescription":"Function that create an object from a text",
-	"string":"Text",
-	"true":"True",
-	"false":"False",
-	"refreshDatasource":"Update datasource",
-	"refreshDatasourceDescription":"Function that update a datasource, with or without filters",
-	"keepFilters":"Keep filter(s)? : If true, keep the filters on datasource update.",
-	"typeOf":"Is type of?",
-	"typeOfDescription":"Function that verify if a variable is of determined type",
-	"number":"Number",
-	"undefined":"Undefined",
-	"function":"Function",
-	"array":"List",
-	"returnType":"Return Type",
-	"mediaType":"Media Type",
+  "disableComponentDesc": "Function that disable a component from screen",
+  "CategoryType.OBJECT": "Object",
+  "getProperty": "Get Property",
+  "getPropertyDescription": "Function to get object property.",
+  "object": "Object",
+  "property": "Property",
+  "setProperty": "Set Value",
+  "setPropertyDescription": "Function to assign value to object.",
+  "CategoryType.DEVICE": "Mobile Devices",
+  "vibrate": "Vibrate",
+  "vibrateDescription": "Function to vibrate the mobile device.",
+  "getCurrentPosition": "Get geo-referenced position",
+  "getCurrentPositionDescription": "Function to obtain geo-referenced position.",
+  "success": "Success",
+  "error": "Error",
+  "watchPosition": "Observe Position",
+  "watchPositionDescription": "Function to observe the change in geo-referenced position.",
+  "maximumAge": "Maximum Age",
+  "timeout": "Time Out",
+  "enableHighAccuracy": "Enable High Accuracy",
+  "getPicture": "Get Image",
+  "getPictureDescription": "Function to get an image of the Camera, Gallery, Album of the device.",
+  "destinationType": "Target type",
+  "pictureSourceType": "Image Source",
+  "clearWatch": "Stop Observe",
+  "idsFromScreen": "Get Identifier: Identifier (id) to be gotten from a selected form",
+  "attrName": "Attribute name: Attribute name on a identifier. Example: src='test' returns src",
+  "attrValue": "Attribute value: Attribute value on a identifier. Example: src='test' returns test",
+  "getDirectory": "Get Directory",
+  "getDirectoryDescription": "Function to get directory on the mobile device.",
+  "INTERNAL": "INTERNAL",
+  "EXTERNAL": "EXTERNAL",
+  "removeFile": "Remove File",
+  "fileName": "File Name",
+  "removeFileDescription": "Function to remove file on mobile device.",
+  "readFile": "Read File",
+  "readFileDescription": "Function to read a file on the mobile device.",
+  "createFile": "Create File",
+  "createFileDescription": "Function to create a file on the mobile device.",
+  "dirEntry": "Directory",
+  "createDirectory": "Create Directory",
+  "dirParent": "Parent Directory",
+  "dirChildrenName": "Directory Name",
+  "setStorageItem": "Add Storage Item",
+  "key": "Key",
+  "setStorageItemDescription": "Function to store values in 'Local Storage'.",
+  "getStorageItem": "Get Storage Item",
+  "getStorageItemDescription": "Function to obtain value stored in 'Local Storage'.",
+  "removeStorageItem": "Remove Storage Item",
+  "removeStorageItemDescription": "Function to remove the value stored in the key in 'Local Storage'.",
+  "watchID": "Observe Id",
+  "getConnection": "Network Status",
+  "getConnectionDescription": "Function to provides information about the device's cellular and wifi connection",
+  "verifyConnection": "Check Network Status",
+  "verifyConnectionDescription": "Function to check the status of the device connection.",
+  "UnknownConnection": "Unknown connection",
+  "EthernetConnection": "Ethernet connection",
+  "WiFiConnection": "WiFi connection",
+  "Cell2GConnection": "Cell 2G connection",
+  "Cell3GConnection": "Cell 3G connection",
+  "Cell4GConnection": "Cell 4G connection",
+  "CellGenericConnection": "Cell generic connection",
+  "NoNetworkConnection": "No network connection",
+  "type": "Type",
+  "vibrateValue": "Milliseconds: Parameter is Integer or Integer List.",
+  "changeAttrValueName": "Change attribute value",
+  "changeAttrValueDesc": "Function that change an attribute value from a element",
+  "getCurrentAcceleration": "Get Current Acceleration",
+  "getCurrentAccelerationDescription": "Function that provides access to device accelerometer.",
+  "watchAcceleration": "Observe Acceleration",
+  "watchAccelerationDescription": "Function to monitor device acceleration.",
+  "clearWatchAcceleration": "Stop Acceleration Watcher",
+  "clearWatchAccelerationhDescription": "Function to cancel accelerometer monitoring.",
+  "clearWatchPositionDescription": "Function to cancel geo-referenced positioning monitoring.",
+  "clearWatchPosition": "Stop Postion Watcher",
+  "showModal": "Show modal",
+  "showMobileModal": "Show mobile modal",
+  "showModalDesc": "Function that shows a modal",
+  "showMobileModalDesc": "Function that shows a modal in mobile devices",
+  "openDatabase": "Create Database",
+  "openDatabaseDescription": "Function to create a database on the mobile device. If no name is given, it will be created with a default name.",
+  "executeSql": "Run Command SQL",
+  "executeSqlDescription": "Function to execute command SQL.",
+  "text": "Text",
+  "arrayParams": "List of parameters",
+  "downloadFileName": "Start file download on URL",
+  "downloadFileDescription": "Starts downloading a file from a url",
+  "downloadFileParam0": "URL: Url for download",
+  "qrCodeScanner": "Read barcode",
+  "formatQRCode": "Format: Format to be searched",
+  "messageQRCode": "Message: Message displayed when camera is openned",
+  "qrCodeScannerDescription": "Function that read know formats. Example: QR_CODE.",
+  "openReport": "Open Report",
+  "openReportDescription": "Function responsible for opening a report.",
+  "report": "Report",
+  "statement": "Statements: Statements to be executed",
+  "executeAsynchronousName": "Execute asynchronous",
+  "executeAsynchronousDescription": "Function that execute statement asynchronously",
+  "scheduleExecutionName": "Schedule execution",
+  "scheduleExecutionDescription": "Function that schedule statements to be executed after a delay",
+  "scheduleExecutionParam1": "Initial Delay: Initial delay to execute the statements at first time",
+  "scheduleExecutionParam2": "Schedule Time: Update time between execute the statements",
+  "scheduleExecutionParam3": "Measurement Time: Measurement time used to quantify the others parameters",
+  "millisecondss": "Milliseconds",
+  "hours": "Hours",
+  "minutes": "Minutes",
+  "incSecond": "Increment second on date",
+  "functionToIncSecond": "Function to increment second in date",
+  "secondsToIncrement": "Seconds to increase",
+  "incMinute": "Increment minute on date",
+  "functionToIncMinute": "Function to increment minute in date",
+  "minutesToIncrement": "Minutes to increase",
+  "incHour": "Increment hour on date",
+  "functionToIncHour": "Function to increment hour in date",
+  "hoursToIncrement": "Hours to increase",
+  "getHoursBetweenDates": "Get hours total between dates",
+  "functionToGetHoursBetweenDates": "Function to get hours total between dates",
+  "getMinutesBetweenDates": "Get minutes total between dates",
+  "functionToGetMinutesBetweenDates": "Function to get minutes total between dates",
+  "getSecondsBetweenDates": "Get seconds total between dates",
+  "functionToGetSecondsBetweenDates": "Function to get seconds total between dates",
+  "refreshActiveRecordName": "Exists next record?",
+  "refreshActiveRecordDescription": "Function that return if exists a next record",
+  "refreshActiveRecordParam0": "Datasource",
+  "logoutName": "Logout",
+  "logoutDescription": "Function that logout an user",
+  "hideModal": "Hide modal",
+  "hideModalDesc": "Function that hides a modal",
+  "hideMobileModal": "Hide mobile modal",
+  "hideMobileModalDesc": "Function that hides a modal in mobile devices",
+  "createSerieName": "Create serie",
+  "createSerieDescription": "Function that create a chart serie",
+  "createSerieParamName": "Serie name",
+  "createSerieParamData": "Data: Serie data",
+  "createSerieParamOptions": "Options: Serie Options",
+  "createChartName": "Create chart",
+  "createChartDescription": "Function that create a chart",
+  "createChartOptions": "Options: Chart options",
+  "createChartId": "Id: Chart id (canvas)",
+  "createChartType": "Chart type: Chart type to be created",
+  "createChartSeries": "Chart serie(s): Set of chart series",
+  "createChartLegends": "Legends: Chart legends",
+  "CategoryType.CHART": "Chart",
+  "isShownIonicModal": "Is shown modal?",
+  "isShownIonicModallDesc": "Function that return if a modal are shown",
+  "createObject": "Create object",
+  "createObjectDescription": "Function that create an object from a text",
+  "string": "Text",
+  "true": "True",
+  "false": "False",
+  "refreshDatasource": "Update datasource",
+  "refreshDatasourceDescription": "Function that update a datasource, with or without filters",
+  "keepFilters": "Keep filter(s)? : If true, keep the filters on datasource update.",
+  "typeOf": "Is type of?",
+  "typeOfDescription": "Function that verify if a variable is of determined type",
+  "number": "Number",
+  "undefined": "Undefined",
+  "function": "Function",
+  "array": "List",
+  "returnType": "Return Type",
+  "mediaType": "Media Type",
 	"setActiveTab": "Change tab",
 	"setActiveTablDesc": "Function that set active the selected tab",
 	"showLoading":"Show Loading",
