--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -428,5 +428,8 @@
   "getDeviceInfoDescription": "Função que obtém as informações do dispositivo",
   "getFirebaseToken": "Obter Token do Firebase",
   "getFirebaseTokenDescription": "Função que retorna o token do firebase para enviar notificações push",
-  "dbName": "Nome do Banco"
+  "dbName": "Nome do Banco",
+  "getUserToken":"Obter Token do Usuário",
+  "getUserTokenDesc":"Função que retonar o  Token do Usuário (X-AUTH-TOKEN)"
+
 }
