--- a/i18n/locale_pt_br.json
+++ b/i18n/locale_pt_br.json
@@ -66,19 +66,19 @@
   "hour": "Hora",
   "minute": "Minuto",
   "second": "Segundo",
-  "callServerBlocklyAsync": "Chamar blockly servidor assíncrono",
-  "functionToCallServerBlocklyAsync": "Função para chamar blockly do servidor assíncrono",
+  "callServerBlocklyAsync": "Chamar block servidor assíncrono",
+  "functionToCallServerBlocklyAsync": "Função para chamar bloco do servidor assíncrono",
   "classNameWithMethod": "Nome do Bloco",
   "callbackSuccess": "Callback sucesso: função para callback quando for sucesso",
   "callbackError": "Callback erro: função para callback quando ocorrer erro",
   "params": "Parâmetros",
   "callServerBlockly": "Chamar Bloco",
   "functionToCallServerBlockly": "Função para chamar bloco de programação",
-  "makeCallServerBlocklyAsync": "Chamar blockly servidor assíncrono - callback com blockly",
-  "functionToMakeCallServerBlocklyAsync": "Função para chamar blockly do servidor assíncrono e com possibilidade de definir os callback como string (nome do blockly completo)",
+  "makeCallServerBlocklyAsync": "Chamar bloco servidor assíncrono - callback com bloco",
+  "functionToMakeCallServerBlocklyAsync": "Função para chamar bloco do servidor assíncrono e com possibilidade de definir os callback como string (nome do bloco completo)",
   "blocklyWithFunction": "Nome do Bloco",
-  "callbackBlocklySuccess": "Callback sucesso: nome do blockly (completo) para ser chamado quando obter a resposta do servidor com sucesso",
-  "callbackBlocklyError": "Callback erro: nome do blockly (completo) para ser chamado quando obter a resposta do servidor com erro",
+  "callbackBlocklySuccess": "Callback sucesso: nome do bloco (completo) para ser chamado quando obter a resposta do servidor com sucesso",
+  "callbackBlocklyError": "Callback erro: nome do bloco (completo) para ser chamado quando obter a resposta do servidor com erro",
   "changeValueOfField": "Alterar valor do campo",
   "functionToChangeValueOfField": "Função para alterar valor do campo",
   "field": "Campo",
@@ -91,7 +91,7 @@
   "getValueOfField": "Obter valor do",
   "functionToGetValueOfField": "Função para obter valor do campo",
   "fieldNameFromScreen": "Obter nome do campo",
-  "functionToGetFieldNameFromScreen": "Função para obter nome do campo (É necessário associar o blockly ao formulário)",
+  "functionToGetFieldNameFromScreen": "Função para obter nome do campo (É necessário associar o bloco ao formulário)",
   "throwExceptionName": "Lança exceção",
   "throwExceptionDescription": "Função que lança exceção com uma mensagem",
   "throwExceptionParam0": "Mensagem",
